NP-1014: improve DataciteClientTest